--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: video_player
+name: flutter_video_player
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
@@ -33,6 +33,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  video_player: ^2.4.5
+  image_picker: ^0.8.5+3
 
 dev_dependencies:
   flutter_test:
