Feat: set permission

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,11 +45,11 @@
 	<false/>
 	<key>CADisableMinimumFrameDurationOnPhone</key>
 	<true/>
-	<ket>NSPhotoLibraryUsageDescription</key>
+	<key>NSPhotoLibraryUsageDescription</key>
 	<string>사진첩 권한을 허가해주세요.</string>
-	<ket>NSCameraUsageDescription</key>
+	<key>NSCameraUsageDescription</key>
 	<string>카메라 권한을 허가해주세요.</string>
-	<ket>NSMicrophoneUsageDescription</key>
+	<key>NSMicrophoneUsageDescription</key>
 	<string>마이크 권한을 허가해주세요.</string>
 </dict>
 </plist>
